syntax = "proto3";
package espmeshmesh;

message NotificationBeacon {
  uint32 coordinator_id = 1;
  repeated uint32 repeaters = 2; 
  uint32 total_cost = 3;
}
